--- a/css/tocpic.css
+++ b/css/tocpic.css
@@ -69,15 +69,19 @@ hr{
     .title-main {
         font-size: 15px;
         border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
+        border-top-right-radius: 5px;
     }
 
     .title-main>span {
         font-size: 9px;
     }
 
+    .topics{
+        flex-direction: column;
+    }
+
     .topic {
-        width: 35%;
+        width: 70%;
     }
 
     .image-topic img {
