--- a/css/tocpic.css
+++ b/css/tocpic.css
@@ -16,7 +16,6 @@ hr{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     width: 30%;
-    /* text-shadow: 2px 2px 2px #c688eb; */
 }
 
 .title-main>span {
@@ -67,21 +66,23 @@ hr{
 @media (max-width: 575px) {
 
     .title-main {
-        font-size: 15px;
         border-top-left-radius: 5px;
         border-top-right-radius: 5px;
+        width: 40%;
     }
 
     .title-main>span {
-        font-size: 9px;
+        font-size: 13px;
     }
 
     .topics{
+        margin-left: 15px;
+        margin-right: 15px;
         flex-direction: column;
     }
 
     .topic {
-        width: 70%;
+        width: 100%;
     }
 
     .image-topic img {
@@ -90,15 +91,15 @@ hr{
     }
     
     .info-topic h1 {
-        font-size: 7px !important;
+        font-size: 13px !important;
     }
 
     .info-topic h4{
-        font-size: 6px;
+        font-size: 12px;
     }
 
     .info-topic p{
-        font-size: 4px;
+        font-size: 11px;
     }
 }
 
